# hyperliquid-mcp-python

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AGENT.md  API_DOCS_COMPLETE.md  Agent.md  CHANGELOG.md  CNAME  COMPLETION_REPORT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  Makefile.docs  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SETUP_AUTO_FORMAT.md  TASK.md  cli.py  docs-requirements.txt  index.html  main.py  mkdocs.yml  publish.sh  pyproject.toml  sitemap.xml  test_http_tools.py  test_tool_registration.py  verify_completion.py
.github/: BRANCH_PROTECTION.md  CHECKLIST.md  CODE_QUALITY.md  SETUP_SUMMARY.md  WORKFLOWS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: planner.prompt.md  release.prompt.md  review.prompt.md
.github/workflows/: auto-format.yml  ci.yml  docs.yml  publish.yml
api/error-handling/: index.html
api/response-format/: index.html
api/tools-reference/: index.html
changelog/: index.html
developers/contributing/: index.html
docs/: README.md  changelog.md  index.md  troubleshooting.md
docs/api/: error-handling.md  response-format.md  tools-reference.md
docs/developers/: contributing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: account-management.md  mcp-integration.md  trading-tools.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/account-management/: index.html
guides/mcp-integration/: index.html
guides/trading-tools/: index.html
scripts/: publish.sh  setup-branch-protection.sh  setup_docs.sh
search/: search_index.json
services/: constants.py  hyperliquid_services.py  validators.py
test_scripts/: QUICK_REFERENCE.md  README.md  check_all_balances.py  check_detailed_balance.py  debug_tpsl.py  interactive_test.py  run_tests.sh  test_account_info.py  test_connection.py  test_funding_history.py  test_grouping_fix.py  test_market_data.py  test_orderbook.py  test_price_calculator.py  test_small_order.py  verify_completion.py
tests/: __init__.py  conftest.py
tests/integration/: test_account_address.py  test_candles_snapshot_tool.py  test_oco_grouping.py
tests/unit/: test_candles_snapshot.py  test_constants.py  test_tpsl_orders.py  test_validators.py
troubleshooting/: index.html
