[project]
name = "hyperliquid-mcp-python"
version = "0.1.4"
description = "HyperLiquid MCP Server with FastMCP - Trading tools and account management"
authors = [
    {name = "Gigabrain", email = "chetan@gigabrain.gg"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
keywords = ["hyperliquid", "mcp", "trading", "fastmcp", "ai", "crypto", "perpetuals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=2.9.2",
    "hyperliquid-python-sdk>=0.15.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jamiesun/hyperliquid-mcp"
Repository = "https://github.com/jamiesun/hyperliquid-mcp"
Documentation = "https://github.com/jamiesun/hyperliquid-mcp#readme"
"Bug Tracker" = "https://github.com/jamiesun/hyperliquid-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[project.scripts]
hyperliquid-mcp = "cli:main"
start = "main:start_server"
stdio = "main:stdio_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"main.py" = "main.py"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "isort>=5.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
