[project]
name = "hyperliquid-mcp-python"
version = "0.1.8"
description = "HyperLiquid MCP Server with FastMCP - Trading tools and account management"
authors = [
    {name = "jettwang", email = "jamiesun.net@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
keywords = ["hyperliquid", "mcp", "trading", "fastmcp", "ai", "crypto", "perpetuals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=2.13.0.1",
    "hyperliquid-python-sdk>=0.15.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/talkincode/hyperliquid-mcp-python"
Repository = "https://github.com/talkincode/hyperliquid-mcp-python"
Documentation = "https://github.com/talkincode/hyperliquid-mcp-python#readme"
"Bug Tracker" = "https://github.com/talkincode/hyperliquid-mcp-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]

[project.scripts]
hyperliquid-mcp = "cli:main"
start = "main:start_server"
stdio = "main:stdio_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"main.py" = "main.py"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "pre-commit>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进使用空格
indent-style = "space"
# 保留魔术逗号
skip-magic-trailing-comma = false
# 行尾使用 LF
line-ending = "lf"
